# idols_and_ses_code

./: README.md
assets/: Role_models_by_SES.xlsx  Role_models_by_SES_precleaned.xlsx  role_model_data.xlsx
code/: .python-version  README.md  pyproject.toml
code/data_exploration/: bert.py  distributions.py  exploration.py  human_annotation.py  role_models.py  sbert.py  ses.py  text_corrections.py  topic_modelling.py  visualization.py  zero_shot.py
code/evaluation/: eval_articles.py  eval_role_models.py  eval_semantic_clustering.py  eval_topic_modelling.py  eval_topic_modelling_separated.py  eval_zero_shot.py  lib_semantic_clustering.py  lib_topic_modelling.py  lib_zero_shot.py  thesis_content_data.py  thesis_content_semantic_clustering.py  thesis_content_topic_modelling.py  thesis_content_zero_shot.py
code/tasks/: task_articles_preparation.py  task_balancing.py  task_human_annotation.py  task_semantic_embedding.py  task_ses.py  task_tokenization.py  task_topic_modelling.py  task_zero_shot.py
code/test/: test_article_preparation.py  test_balancing.py  test_semantic_embedding.py  test_ses.py  test_tokenization.py  test_zero_shot.py
