[tool.poetry]
name = "econ-ba"
version = "0.1.0"
description = ""
authors = ["Maximilian Schattauer <max@schattauer.info>"]
readme = "README.md"
packages = [{include = "econ_ba"}]

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
scipy = "1.10"
spacy = "^3.4.3"
textacy = "^0.12.0"
ipykernel = "^6.19.2"
numpy = "^1.23.5"
pandas = "^1.5.2"
scikit-learn = "^1.2.0"
matplotlib = "^3.6.2"
nltk = "^3.8"
textblob = "^0.17.1"
spacy-langdetect = "^0.1.2"
pytask = "^0.2.7"
tables = "^3.7.0"
sentence-transformers = "^2.2.2"
scikit-learn-extra = "^0.2.0"
openpyxl = "^3.0.10"
gensim = "^4.3.0"
pprintpp = "^0.4.0"
pandarallel = "^1.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytask.ini_options]
paths = "tasks"